--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,13 @@ body {
     margin: 0 auto;
 }
 
-* {
+*{
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
+}
+h2{
+    margin:0;
+    padding:0;
 }
 
 /****************    couleurs  ***************/
@@ -116,7 +120,7 @@ nav div a:hover::before {
 
 @media (max-width: 768) {}
 
-/****************    Search  ***************/
+/****************  Search  ***************/
 
 form{
     border:2px solid red;
@@ -130,4 +134,229 @@ form input{
 form button{
     background-color: unset;
     border:none;
+}
+
+
+
+/****************  Filters  ***************/
+
+.filters-container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    font-weight: 800;
+    align-items: center;
+    margin:30px 0;
+    
+    
+}
+.filters-container p{
+    margin: 0;
+    
+}
+.filters-container .filter{
+    display: flex;
+    border:2px solid #F2F2F2;
+    border-radius: 9999px;
+    height:50px;
+    align-items: center;
+    text-decoration: none;
+    padding-right: 20px;
+    color:black;
+    
+    
+    
+    
+}
+.filters-container .filter i{
+    background-color: #DEEBFF;
+    display: inline-block;
+    width:50px;
+    height:50px;
+    border-radius: 99999px;
+    text-align: center;
+    line-height: 50px;
+    transform: translateX(-2px);
+    margin-right: 20px;
+    color:#0065FC;
+    
+    
+   
+}
+
+
+/****************  Filters:hover  ***************/
+
+
+.filters-container .filter:hover{
+    flex-direction: row-reverse;
+    padding-left: 20px;
+    padding-right:0;
+    transition: all .5s;
+    
+}
+.filters-container .filter:not(hover){
+    
+    transition: all .5s;
+    
+}
+.filters-container .filter:hover i{
+    margin:0;
+    padding:0;
+    transform: translateX(2px);
+    transition: all .5s;
+}
+.filters-container .filter:not(hover) i{
+    
+    transition: all .5s;
+    
+}
+
+.infos i{
+    color:#0065FC;
+    border: 1px solid #c9c9c9;
+    border-radius: 9999px;
+    width:20px;
+    height:20px;
+    text-align: center;
+    margin-right: 20px;
+    
+}
+
+
+/****************  ALL CARDS  ***************/
+
+.allcards{
+    display:flex;
+    flex-direction: row;
+}
+.populary-cards{
+    width:10%;
+    background-color: red;
+}
+
+
+/****************  Hébergements  ***************/
+
+.hebergements-container{
+    display: flex;
+    gap:40px;
+    margin-top: 30px;
+}
+.hebergements-container h2{
+    margin:20px;
+}
+.hebergements-container .show-more{
+    margin:20px;
+}
+
+
+/****************  Hébergements à Marseille  ***************/
+
+
+.marseille-container{
+    background-color: #F2F2F2;
+    width:70%;
+    border-radius: 25px;
+}
+.marseille-cards-container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap:20px;
+}
+.marseille-card{
+    width:30%;
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 25px;
+    -webkit-box-shadow: 7px 10px 26px -11px rgba(0,0,0,0.75);
+-moz-box-shadow: 7px 10px 26px -11px rgba(0,0,0,0.75);
+box-shadow: 7px 10px 26px -11px rgba(0,0,0,0.75);
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+.marseille-card img{
+    height:140px;
+    width:100%;
+    object-fit: cover;
+    border-radius: 25px 25px 0 0;
+}
+.marseille-card h3, p{
+    margin:0;
+    padding:7px;
+}
+.marseille-card .star-container{
+    padding:7px;
+    color:#0065FC;
+    
+}
+.marseille-card:nth-child(1) .star-container i:nth-child(5){
+    color:#d8d8d8;
+}
+.marseille-card:nth-child(3) .star-container i:nth-child(5){
+    color:#d8d8d8;
+}
+.marseille-card:nth-child(4) .star-container i:nth-child(5){
+    color:#d8d8d8;
+}
+.marseille-card:nth-child(4) .star-container i:nth-child(4){
+    color:#d8d8d8;
+}
+.marseille-card:nth-child(5) .star-container i:nth-child(5){
+    color:#d8d8d8;
+}
+
+/****************  Hébergements Les plus populaires  ***************/
+
+
+.populary-container{
+    background-color: #F2F2F2;
+    border-radius: 25px;
+    width:30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.populary-cards-container{
+    width:90%;
+    display: flex;
+    flex-direction: column;
+   row-gap: 20px;
+
+}
+.populary-card{
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    border: 5px solid white;
+    border-radius: 25px;
+    font-size: 13px;
+    height:150px;
+    -webkit-box-shadow: 7px 10px 26px -11px rgba(0,0,0,0.75);
+-moz-box-shadow: 7px 10px 26px -11px rgba(0,0,0,0.75);
+box-shadow: 7px 10px 26px -11px rgba(0,0,0,0.75);
+
+}
+.populary-card img{
+    width:40%;
+    object-fit: cover;
+    border-radius: 25px 0 0 25px;
+}
+.populary-text-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.populary-card h3, p, .star-container{
+    padding:10px;
+    margin: 0;
+}
+.populary-card .star-container{
+    flex-grow:1;
+    padding:30px 0 0 10px;
+    justify-self: flex-end;
 }
