--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ h2{
     margin:0;
     padding:0;
 }
+a{
+    text-decoration: none;
+    color:black;
+}
 
 /****************    couleurs  ***************/
 /****************    Bleu : #0065FC   ***************/
@@ -118,8 +122,19 @@ nav div a:hover::before {
     }
 }
 
-@media (max-width: 768) {}
 
+/****************  en-tête  ***************/
+
+.entete{
+    padding:0;
+}
+
+@media (max-width: 992px) {
+.entete{
+    padding: 20px;
+}
+
+}
 /****************  Search  ***************/
 
 form{
@@ -244,10 +259,11 @@ form button{
     margin-top: 30px;
 }
 .hebergements-container h2{
-    margin:20px;
+    margin-bottom: 20px;
 }
 .hebergements-container .show-more{
-    margin:20px;
+    font-weight: 800;
+    
 }
 
 
@@ -256,14 +272,17 @@ form button{
 
 .marseille-container{
     background-color: #F2F2F2;
-    width:70%;
+    width:66%;
     border-radius: 25px;
+    padding: 20px;
+
 }
 .marseille-cards-container{
     display:flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
     gap:20px;
+    margin-bottom: 20px;
 }
 .marseille-card{
     width:30%;
@@ -314,7 +333,7 @@ justify-content: space-between;
 .populary-container{
     background-color: #F2F2F2;
     border-radius: 25px;
-    width:30%;
+    width:33%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -359,4 +378,67 @@ box-shadow: 7px 10px 26px -11px rgba(0,0,0,0.75);
     flex-grow:1;
     padding:30px 0 0 10px;
     justify-self: flex-end;
+    color:#0065FC;
+}
+.populary-card:nth-child(2) .star-container i:nth-child(5){
+    color:#d8d8d8;
+}
+.populary-card:nth-child(3) .star-container i:nth-child(5){
+    color:#d8d8d8;
+}
+@media (max-width: 992px) {
+    .hebergements-container{
+        flex-direction: column;
+    }
+
+
+/****************  Hébergements Les plus populaires 992px  ***************/
+
+
+.hebergements-container .populary-container{
+    order:1;
+    width:100%;
+    padding-bottom: 35px;
+    background-color: #fff;
+}
+.populary-card {
+    height:200px;
+}
+.populary-text-content{
+    padding-left: 15px;
+    justify-content: space-evenly;
+}
+.populary-container p{
+    margin-bottom: 55px;
+    padding-top: 0;
+}
+.populary-container h3{
+    padding-bottom: 0;
+}
+.populary-card .star-container{
+    flex-grow: unset;
+    padding-top: 0;
+}
+
+
+
+
+/****************  Hébergements marseille 992px  ***************/
+
+
+.hebergements-container .marseille-container{
+    order:2;
+    width:100%;
+    background-color: #fff;
+}
+.marseille-cards-container{
+    flex-direction: column;
+    align-items: center;
+}
+.marseille-card{
+    width:90%;
+}
+.marseille-card img{
+    height:200px;
+}
 }
