--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
-/*****   couleurs  ***************/
-/*****   Bleu : #0065FC   ***************/
-/*****   Bleu clair : #DEEBFF ***************/
-/*****   Gris : #F2F2F2  ***************/
-
+/****   couleurs  ****/
+/****   Bleu : #0065FC   ****/
+/****   Bleu clair : #DEEBFF ****/
+/****  Gris : #F2F2F2  ****/
+html{
+    scroll-behavior: smooth;
+}
 * {
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
@@ -28,7 +30,7 @@ li {
     box-shadow: 0px 0px 28px -13px rgba(0, 0, 0, 0.75);
 }
 
-/****************    Header   ***************/
+/****    Header   ****/
 
 
 header nav {
@@ -131,7 +133,7 @@ nav div a:hover::before {
 }
 
 
-/****************  en-tête  ***************/
+/****  en-tête  ****/
 
 .entete {
     padding: 30px;
@@ -144,7 +146,7 @@ nav div a:hover::before {
 
 }
 
-/****************  Search  ***************/
+/****  Search  ****/
 
 
 form {
@@ -201,7 +203,9 @@ form label i {
 }
 
 
-/****************  Search 992px  ***************/
+/****  Search 992px  ****/
+
+
 @media (max-width: 992px) {
     form {}
 
@@ -219,7 +223,8 @@ form label i {
 }
 
 
-/****************  Filters  ***************/
+/****  Filters  ****/
+
 
 .filters-container {
     display: flex;
@@ -277,7 +282,7 @@ form label i {
     padding: 0 20px;
 }
 
-/****************  Filters:hover  ***************/
+/****  Filters:hover  ****/
 
 .filters-container .filter div:hover {
     color: #0065FC;
@@ -299,7 +304,7 @@ form label i {
 }
 
 
-/****************  ALL CARDS  ***************/
+/****  ALL CARDS  ****/
 
 .allcards {
     display: flex;
@@ -312,7 +317,7 @@ form label i {
 }
 
 
-/****************  Hébergements  ***************/
+/****  Hébergements  ****/
 
 .hebergements-container {
     display: flex;
@@ -331,7 +336,7 @@ form label i {
 }
 
 
-/****************  Hébergements à Marseille  ***************/
+/****  Hébergements à Marseille  ****/
 
 
 .marseille-container {
@@ -386,7 +391,7 @@ p {
 }
 
 
-/****************  Hébergements Les plus populaires  ***************/
+/****  Hébergements Les plus populaires  ****/
 
 
 .populary-container {
@@ -470,7 +475,7 @@ p,
 
 
 
-/****************  Hébergements Les plus populaires 992px  ***************/
+/****  Hébergements Les plus populaires 992px  ****/
 
 @media (max-width: 992px) {
     .hebergements-container {
@@ -514,7 +519,7 @@ p,
 
 
 
-    /****************  Hébergements marseille 992px  ***************/
+    /****  Hébergements marseille 992px  ****/
     .hebergements-container {
         margin: 0;
 
@@ -555,7 +560,7 @@ p,
     }
 }
 
-/****************  Activités à Marseille  ***************/
+/****  Activités à Marseille  ****/
 
 .activities-container {
     display: flex;
@@ -623,7 +628,7 @@ p,
 }
 
 
-/****************  Activités à Marseille 992px  ***************/
+/****  Activités à Marseille 992px  ****/
 
 @media (max-width: 992px) {
     .activities-cards-container {
@@ -638,9 +643,9 @@ p,
     }
 
     .activities-card img,
-    .duo-activities img {
-        max-height: 150px;
-
+    .duo-activities-card img {
+        
+        height:300px;
     }
 
 }
@@ -649,9 +654,14 @@ p,
     .activities-cards-container {
         width: 100%;
     }
+    .activities-card img,
+    .duo-activities-card img {
+        
+        max-height: 150px;
+    }
 }
 
-/****************  Footer  ***************/
+/****  Footer  ****/
 
 footer {
     display: flex;
@@ -665,15 +675,18 @@ footer {
     padding: 0;
 }
 
-.footer-links-container h3 {
-    margin-bottom: 30px;
-}
+
 
 .footer-links-container li {
     margin-bottom: 10px;
 }
+.title-footer{
+    padding-bottom: 30px;
+    font-weight: 700;
+    
+}
 
-/****************  Footer 992px  ***************/
+/****  Footer 992px  ****/
 
 
 @media (max-width: 992px) {
