--- a/css/style.css
+++ b/css/style.css
@@ -469,6 +469,12 @@ p,
         height: 100%;
         justify-content: space-evenly;
     }
+    .populary-card{
+        height:220px;
+    }
+    .populary-card img{
+        width:55%;
+    }
 }
 
 
@@ -604,6 +610,7 @@ p,
     display: flex;
     flex-direction: column;
     row-gap: 30px;
+    justify-content: space-between;
 }
 
 .duo-activities-card {
@@ -613,7 +620,15 @@ p,
     border-radius: 25px;
 
 }
-
+#pomegues{
+    flex-grow: 1;
+    
+}
+#pomegues h3{
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
 .duo-activities img {
     width: 100%;
     height: 150px;
@@ -657,7 +672,7 @@ p,
     .activities-card img,
     .duo-activities-card img {
         
-        max-height: 150px;
+        max-height: 250px;
     }
 }
 
